--- a/JH/index.html
+++ b/JH/index.html
@@ -24,24 +24,31 @@
 
 <script type="text/javascript">
     $(window).load(function(){
-      $('#flexslider').flexslider({
-        animation: "slide",
-        start: function(slider){
-          $('body').removeClass('loading');
-        }
-      });
+        $('#flexslider').flexslider({ animation: "slide",
+            start: function(slider){
+                $('body').removeClass('loading');
+            }
+        });
     });
-  </script>
+</script>
 <script type="text/javascript">
     $(window).load(function(){
-      $('#flexslider2').flexslider({
-        animation: "slide",
-        start: function(slider){
-          $('body').removeClass('loading');
-        }
-      });
+        $('#flexslider2').flexslider({ animation: "slide",
+            start: function(slider){
+                $('body').removeClass('loading');
+            }
+        });
     });
-  </script>
+</script>
+<script type="text/javascript">
+    $(window).load(function(){
+        $('#flexslider-product').flexslider({ animation: "slide",
+            start: function(slider){
+                $('body').removeClass('loading');
+            }
+        });
+    });
+</script>
 </head>
 
 
@@ -127,6 +134,88 @@
                 <li><a href="product-02.html"><img src="images/banner/main_04_s.png" width="100%"></a></li>
                 <li><a href="product-02.html"><img src="images/banner/main_05_s.png" width="100%"></a></li>
             </ul>
+        </div>
+    </section>
+    <section class="hotBox" id="goThe01">
+        <div class="top_title">
+            <h3>人氣商品推薦 / <span>TOP 10</span></h3>
+        </div>
+        <div class="ContentsBox">
+            <div class="flexslider" id="flexslider-product">
+                <ul class="slides">
+                    <li>
+                        <a href="product-02.html">
+                            <img src="images/product/p02/1-R03-01.jpg" alt="R03-01-刷紋白色">
+                            <h4>田園鄉村風</h4>
+                            <p>R03-01-刷紋白色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-02.html">
+                            <img src="images/product/p02/6-R05-01.jpg" alt="R05-01-刷紋粉藍色">
+                            <h4>田園鄉村風</h4>
+                            <p>R05-01-刷紋粉藍色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-05.html">
+                            <img src="images/product/p05/1-R02-02.jpg" alt="R02-02-懷舊綠">
+                            <h4>匠心懷舊風</h4>
+                            <p>R02-02-懷舊綠</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-01.html">
+                            <img src="images/product/p01/3-R21-12.jpg" alt="R21-12-珍珠灰色">
+                            <h4>細緻沉穩風</h4>
+                            <p>R21-12-珍珠灰色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-06.html">
+                            <img src="images/product/p06/2-R36-01.jpg" alt="R36-01-刷紋黑色">
+                            <h4>經典黑白風</h4>
+                            <p>R37-01-刷紋白色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-04.html">
+                            <img src="images/product/p04/7-R23-07.jpg" alt="R23-07-寶藍色">
+                            <h4>英式田園風</h4>
+                            <p>R23-07-寶藍色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-02.html">
+                            <img src="images/product/p02/9-R03-01.jpg" alt="R03-01-刷紋鉑灰色">
+                            <h4>田園鄉村風</h4>
+                            <p>R03-01-刷紋鉑灰色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-02.html">
+                            <img src="images/product/p02/9-R03-01.jpg" alt="R03-01-刷紋鉑灰色">
+                            <h4>雋永經典風</h4>
+                            <p>R03-01-柚木本色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-02.html">
+                            <img src="images/product/p02/9-R03-01.jpg" alt="R03-01-刷紋鉑灰色">
+                            <h4>現代北歐風</h4>
+                            <p>R05-01-原木色</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="product-01.html">
+                            <img src="images/product/p01/2-R21-12.jpg" alt="R21-12-知性灰藍色">
+                            <h4>細緻沉穩風</h4>
+                            <p>R21-12-知性灰藍色</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <p class="more"><a href="product-01.html">前往產品介紹</a></p>
         </div>
     </section>
     <section class="serviceBox" id="goThe01">
