--- a/JH/life_style.html
+++ b/JH/life_style.html
@@ -20,23 +20,34 @@
 <body class="page">
     <div class="mobile-nav" id="sideMenu">
         <ul class="socialBox">
-            <li><a class="map" href="#" target="_blank"></a></li>
-            <li><a class="phone" href="#" target="_blank"></a></li>
-            <li><a class="fb" href="#" target="_blank"></a></li>
+            <li><a class="map" href="https://goo.gl/maps/EWWfJ6YaxKq" target="_blank"></a></li>
+            <li><a class="phone" href="tel:+886-3-9906828" target="_blank"></a></li>
+            <li><a class="fb" href="https://www.facebook.com/pages/category/Community/%E6%AD%A3%E8%B1%AA%E6%9C%A8%E6%A5%AD%E8%82%A1%E4%BB%BD%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8-209694019094602/" target="_blank"></a></li>
         </ul>
         <ul class="Oneself">
             <li><h3><a href="about.html">關於我們  ｜  ABOUT US</a></h3>
                 <div class="submenu">
-                    <p><a href="about.html#go01">公司簡介</a></p>
+                <!--     <p><a href="about.html#go01">公司簡介</a></p>
                     <p><a href="about.html#go02">核心能力</a></p>
                     <p><a href="about.html#go03">選材來源</a></p>
                     <p><a href="about.html#go04">原料把關</a></p>
                     <p><a href="about.html#go05">特色漆面</a></p>
                     <p><a href="about.html#go06">獨門工法</a></p>
-                </div>
+                </div> -->
             </li>
             <li><h3><a href="news.html">最新消息  ｜  NEWS</a></h3></li>
-            <li><h3><a href="product-01.html">產品介紹  ｜  PRODUCT</a></h3></li>
+            <li><h3><a href="product-01.html">產品介紹  ｜  PRODUCT</a></h3>
+                <div class="submenu">
+                    <p><a href="product-01.html">細緻沉穩風</a></p>
+                    <p><a href="product-02.html">田園鄉村風</a></p>
+                    <p><a href="product-03.html">雋永經典風</a></p>
+                    <p><a href="product-04.html">英式田園風</a></p>
+                    <p><a href="product-05.html">匠心懷舊風</a></p>
+                    <p><a href="product-06.html">經典黑白風</a></p>
+                    <p><a href="product-07.html">現代北歐風</a></p>
+                    <p><a href="product-08.html">穀倉工業風</a></p>
+                </div>
+            </li>
             <li><h3><a href="life_style.html">風格選品  ｜  LIFE STYLE</a></h3></li>
             <li><h3><a href="faq.html">木門問答  ｜  FAQ</a></h3></li>
             <li><h3><a href="order.html">訂購流程  ｜  ORDER PROCESS</a></h3></li>
