--- a/z-trip/center/order.html
+++ b/z-trip/center/order.html
@@ -9,6 +9,7 @@
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
 </head>
 
@@ -40,6 +41,10 @@
     <!-- 我的訂單 - 列表 -->
     <section class="order_list">
         <div class="contents_box clearfix">
+            <div class="searchbox">
+                <input class="fbox" type="text" name="" placeholder="搜尋訂單">
+                <a class="icon" href="#"><i class="fas fa-search"></i></a>
+            </div>
             <ul class="item_filter">
                 <li><p class="btn_in"><a href="#">全部(101)</a></p></li>
                 <li><p><a href="#">待付款(2)</a></p></li>
@@ -47,10 +52,6 @@
                 <li><p><a href="#">已完成(98)</a></p></li>
                 <li><p><a href="#">取消(1)</a></p></li>
             </ul>
-            <div class="searchbox">
-                <input class="fbox" type="text" name="" placeholder="搜尋訂單">
-                <a class="icon" href="#"></a>
-            </div>
         </div>
         <ul class="list contents_box">
             <li class="clearfix">
@@ -62,10 +63,10 @@
                     <div class="product_info clearfix">
                         <div class="order_number">
                             <p class="order_date">2019-03-02 09:29</p>
-                            <p class="number"><span class="the_type done_green">已送達</span>訂單編號  STDO190300001</p>
+                            <p class="number"><span class="the_type done_green">已送達</span>訂單編號  STDO190300002</p>
                         </div>
                         <div class="order-total">
-                            <p class="order_date">物流查詢單號  <span><a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank">ACWE129108</a></span></p>
+                            <p class="order_date">物流查詢單號  <span><a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank">G66126721740</a></span></p>
                             <p class="order_money">訂單金額<span class="red">$ 4,300</span></p>
                         </div>
                     </div>
@@ -98,14 +99,14 @@
                                 </div>
                                 <div class="product_info">
                                     <h3 class="product_title"><span class="red">租</span><a href="#" target="_blank"> Z-TRIP全球機 - 澳洲、紐西蘭 512M(澳大利亞)</a></h3>
-                                    <div class="product_item"><p class="product_price">單價  $240</p><span>|</span><p class="use_day">租賃日間   2019-01-22 ～ 2019-01-31（10天）</p></div>
+                                    <div class="product_item"><p class="product_price">單價  $24440</p><span>|</span><p class="use_day">租賃日間   2019-01-22 ～ 2019-01-31（10天）</p></div>
                                     <div class="bottom_item clearfix">
                                         <p class="add_purchase">已加購<a href="#ex2" rel="modal:open">安心險 NT 50/日</a></p>
                                     </div>
                                 </div>
                                 <div class="right_amount">
                                     <p>x 1 </p> 
-                                    <p>$ 240</p>
+                                    <p>$ 242440</p>
                                 </div>
                             </div>
                             <div class="abox label_buy clearfix">
@@ -114,11 +115,11 @@
                                 </div>
                                 <div class="product_info">
                                     <h3 class="product_title"><span>買</span><a href="#" target="_blank">Korin Design Click Pack Pro 終極防盜防後背包(Korin Design Click Pack Pro 終極防盜防後背包)</a></h3>
-                                    <div class="product_item"><p class="product_price">單價  $240</p></div>
+                                    <div class="product_item"><p class="product_price">單價  $240040</p></div>
                                 </div>
                                 <div class="right_amount">
                                     <p>x 1 </p> 
-                                    <p>$ 240</p>
+                                    <p>$ 242440</p>
                                     <p class="serial_number"><a href="#ex1" rel="modal:open">查看序號</a></p>
                                 </div>
                             </div>
@@ -486,6 +487,18 @@
             </li>
 
         </ul>
+        <div class="light-theme pageBox">
+            <ul>
+                <li class="disabled"><span class="current prev">Prev</span></li>
+                <li class="active"><span class="current">1</span></li>
+                <li><a href="#" class="page-link">2</a></li>
+                <li><a href="#" class="page-link">3</a></li>
+                <li class=""><span class="ellipse clickable">…</span></li>
+                <li><a href="#" class="page-link">69</a></li>
+                <li><a href="#" class="page-link">70</a></li>
+                <li><a href="#" class="page-link next">Next</a></li>
+            </ul>
+        </div>
     </section>
 
     <!-- Modal HTML embedded directly into document -->
