Update default img

--- a/z-trip/center/order.html
+++ b/z-trip/center/order.html
@@ -58,7 +58,7 @@
                 <a class="delete" title="刪除"></a>
                 <div class="onder_main_info clearfix">
                     <div class="product_photo">
-                        <img src="https://test.z-trip.com/storage/uploads/product/EfZovUuSdilP3yUr7dOs7qnAWLb1PjuZYo8lqKRZ.jpeg">
+                        <img src="images/img_default.jpg">
                     </div>
                     <div class="product_info clearfix">
                         <div class="order_number">
@@ -95,7 +95,7 @@
                         <div class="order_details">
                             <div class="abox clearfix">
                                 <div class="product_photo">
-                                    <img src="https://test.z-trip.com/storage/uploads/product/EfZovUuSdilP3yUr7dOs7qnAWLb1PjuZYo8lqKRZ.jpeg">
+                                    <img src="images/img_default_2.jpg">
                                 </div>
                                 <div class="product_info">
                                     <h3 class="product_title"><span class="red">租</span><a href="#" target="_blank"> Z-TRIP全球機 - 澳洲、紐西蘭 512M(澳大利亞)</a></h3>
