--- a/z-trip/center/order.html
+++ b/z-trip/center/order.html
@@ -55,7 +55,6 @@
         </div>
         <ul class="list contents_box">
             <li class="clearfix">
-                <a class="delete" title="刪除"></a>
                 <div class="onder_main_info clearfix">
                     <div class="product_photo">
                         <img src="images/img_default.jpg">
@@ -66,7 +65,7 @@
                             <p class="number"><span class="the_type done_green">已送達</span>訂單編號  STDO190300002</p>
                         </div>
                         <div class="order-total">
-                            <p class="order_date">物流查詢單號  <span><a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank">G66126721740</a></span></p>
+                            <p class="order_date">宅配通 查詢單號 <span><a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank">G66126721740</a></span></p>
                             <p class="order_money">訂單金額<span class="red">$ 4,300</span></p>
                         </div>
                     </div>
@@ -133,7 +132,6 @@
             </li>
 
             <li class="clearfix">
-                <a class="delete" title="刪除"></a>
                 <div class=" onder_main_info clearfix">
                     <div class="product_photo">
                         <img src="https://test.z-trip.com/storage/uploads/product/rhIp0wsTOFRu2RU6eEnV8L0dFX5ymgNjuP0KnA9u.jpeg">
@@ -271,7 +269,6 @@
             </li>
 
             <li class="clearfix">
-                <a class="delete" title="刪除"></a>
                 <div class="onder_main_info clearfix">
                     <div class="product_photo">
                         <img src="https://test.z-trip.com/storage/uploads/product/EfZovUuSdilP3yUr7dOs7qnAWLb1PjuZYo8lqKRZ.jpeg">
@@ -282,7 +279,7 @@
                             <p class="number"><span class="the_type done_green">已送達</span>訂單編號  STDO190300001</p>
                         </div>
                         <div class="order-total">
-                            <p class="order_date">物流查詢單號  <span><a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank">ACWE129108</a></span></p>
+                            <p class="order_date">新竹貨運 查詢單號  <span><a href="https://eservice.7-11.com.tw/e-tracking/search.aspx" target="_blank">CAEDS1234567899</a></span></p>
                             <p class="order_money">訂單金額<span class="red">$ 4,300</span></p>
                         </div>
                     </div>
@@ -349,7 +346,6 @@
             </li>
 
             <li class="clearfix">
-                <a class="delete" title="刪除"></a>
                 <div class=" onder_main_info clearfix">
                     <div class="product_photo">
                         <img src="https://test.z-trip.com/storage/uploads/product/rhIp0wsTOFRu2RU6eEnV8L0dFX5ymgNjuP0KnA9u.jpeg">
