--- a/z-trip/center/account.html
+++ b/z-trip/center/account.html
@@ -113,16 +113,8 @@
                     <p class="p_note">您尚未輸入街道地址！</p>
                 </div>
             </div>
-        </form>
-    </section>
-    <!-- </div> -->
-
-    <!-- 帳號資料 - 內容 -->
-    <!-- <div class="tab-pane fade" id="nav-2" role="tabpanel" aria-labelledby="nav-2-tab"> -->
-    <section class="user_info" id="user_info">
-        <form class="userinfo_form_box">
-            <h2 class="top_title">帳號資料</h2>
-            <div class="group clearfix">
+            <h2 class="top_title">變更密碼</h2>
+            <!-- <div class="group clearfix">
                 <label class="left_label">帳號</label>
                 <div class="right_fillbox">
                     <p>anderson@standard-info.com</p>
@@ -134,7 +126,7 @@
                     <p>***************</p>
                     <p class="p_note"><a href="#" target="_blank">變更密碼</a></p>
                 </div>
-            </div>
+            </div> -->
              <div class="group clearfix">
                 <label class="left_label">舊密碼</label>
                 <div class="right_fillbox">
@@ -148,7 +140,7 @@
                         <input class="fbox w_02" type="text" name="" placeholder="請輸入新密碼">
                         <input class="fbox w_02" type="text" name="" placeholder="請再次輸入新密碼">
                     </div>
-                    <p class="p_note p_gray">最少需輸入6個字符。<a href="#" target="_blank">取消修改</a></p>
+                    <p class="p_note p_gray">最少需輸入6個字符。</p>
                 </div>
             </div>
         </form>
