--- a/JH/product-02.html
+++ b/JH/product-02.html
@@ -98,28 +98,28 @@ $(document).ready(function() {
             <div class="for_mob_box">
                 <h3 class="main_title">產品介紹 / <span>PRODUCT</span></h3>
                 <h4 class="sub_title">田園鄉村風</h4>
-                <div class="box-none">
-                <p class="info">北美鄉村風最經典的山形木紋，搭配豐富而內斂的溫暖色系，讓您輕鬆打造自然質樸、不造作的美式鄉村風格。</p>
-                <ul class="menu_type">
-                    <li class="type_title">
-                        <h5 class="has_sub"><span>房間門/推拉門</span></h5>
-                        <ul class="the_sub_menu clearfix" style="display: block;">
-                            <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
-                            <li><p><a class="btn_in" href="product-02.html">田園鄉村風</a></p></li>
-                            <li><p><a href="product-03.html">雋永經典風</a></p></li>
-                            <li><p><a href="product-04.html">英式田園風</a></p></li>
-                            <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
-                            <li><p><a href="product-06.html">經典黑白風</a></p></li>
-                            <li><p><a href="product-07.html">現代北歐風</a></p></li>
-                            <li><p><a href="product-08.html">穀倉工業風</a></p></li>
-                        </ul>
-                    </li>
-                    <li class="type_title">
-                        <h5 class="none"><a href="product-doorframe.html"><span>實木門框</span></a></h5>
-                    </li>
-                </ul>
+                <div class="box-none" id="condition">
+                    <p class="info">北美鄉村風最經典的山形木紋，搭配豐富而內斂的溫暖色系，讓您輕鬆打造自然質樸、不造作的美式鄉村風格。</p>
+                    <ul class="menu_type">
+                        <li class="type_title">
+                            <h5 class="has_sub"><span>房間門/推拉門</span></h5>
+                            <ul class="the_sub_menu clearfix" style="display: block;">
+                                <li><p><a href="product-01.html">細緻沉穩風</a></p></li>
+                                <li><p><a class="btn_in" href="product-02.html">田園鄉村風</a></p></li>
+                                <li><p><a href="product-03.html">雋永經典風</a></p></li>
+                                <li><p><a href="product-04.html">英式田園風</a></p></li>
+                                <li><p><a href="product-05.html">匠心懷舊風</a></p></li>
+                                <li><p><a href="product-06.html">經典黑白風</a></p></li>
+                                <li><p><a href="product-07.html">現代北歐風</a></p></li>
+                                <li><p><a href="product-08.html">穀倉工業風</a></p></li>
+                            </ul>
+                        </li>
+                        <li class="type_title">
+                            <h5 class="none"><a href="product-doorframe.html"><span>實木門框</span></a></h5>
+                        </li>
+                    </ul>
                 </div>
-                <a class="more"></a>
+                <a class="more info_open" id="morecondition" onclick="condition(this)"></a>
             </div>
         </div>
         <ul class="produc_right_deta">
