--- a/pizzahut/index.html
+++ b/pizzahut/index.html
@@ -20,7 +20,6 @@
 				  				<td>
 				  					<a style="display: inline-block;" href="https://www.pizzahut.com.tw/?urlname=banksinopacfareast_201903" target="_blank">
 				  						<img src="images/main_banner.jpg" width="1000" height="1200" alt=""></a>
-				  					</td>
 				  				</td>
 				  			</tr>
 				  			<tr>
@@ -102,7 +101,7 @@
 											  				<li><font style="font-size:20px; text-align: justify; color: #000000; line-height: 33px; font-family: Helvetica, '微軟正黑體',arial,sans-serif; ">遠東商銀刷卡金回饋活動不適用 Bankee 卡、工會卡（公會卡）、校園卡、商務卡及各具現金回饋功能之信用卡。回饋時須為有效卡且無逾期繳款或其他違反信用卡約定條款之情事，始具回饋資格。</font></li>
 											  			</ul>
 									  				</li>
-									  				<li>
+									  				<li style="font-size: 20px;">
 									  					<font style="font-size:20px; text-align: left; color: #000000; line-height: 33px; font-family: Helvetica, '微軟正黑體',arial,sans-serif; ">若因市場狀況變動等因素，永豐銀行、遠東商銀與富利餐飲股份有限公司保留修改、變更或終止優惠內容之權利。</font>
 									  				</li>
 									  			</ul>
