--- a/pizzahut/event/index.html
+++ b/pizzahut/event/index.html
@@ -17,7 +17,7 @@
 
 		<section class="eventinfo_box">
 			<div class="content_box">
-				<h2>NOW好康！刷卡金回饋最多10%</h2>
+				<h2><span>NOW好康！</span>刷卡金回饋最多10%</h2>
 				<p class="btn_order"><a target="_blank" href="https://www.pizzahut.com.tw/?urlname=banksinopacfareast_201903">立即<br>訂餐</a></p>
 				<p class="p_info">於2019/3/19-2019/4/30期間<br>
 					刷永豐銀行或遠東商銀信用卡<br>
