Update link b for order

--- a/pizzahut/event/index.html
+++ b/pizzahut/event/index.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title></title>
+<title>NOW好康！必勝客刷卡金回饋最多10%</title>
+<meta name='description' content="於2019/3/19-2019/4/30期間，刷永豐銀行或遠東商銀信用卡，消費滿$500就送$50刷卡金消費，滿$1,000就送$100刷卡金喔！"/>
+<meta name='keywords' content="必勝客, 永豐銀行, 遠東商銀, 刷卡金, 消費, 回饋, 刷卡金 10%"/>
 <meta name="MobileOptimized" content="width">
 <meta name="HandheldFriendly" content="true">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,13 +14,13 @@
 <body>
 	<main>
 		<section class="kv_main">
-			<img src="images/main_banner.jpg" alt="" width="100">
+			<img src="images/main_banner.jpg" alt="NOW好康！必勝客刷永豐銀行或遠東商銀信用卡，刷卡金回饋最多10%" width="100">
 		</section>
 
 		<section class="eventinfo_box">
 			<div class="content_box">
 				<h2><span>NOW好康！</span>刷卡金回饋最多10%</h2>
-				<p class="btn_order"><a target="_blank" href="https://www.pizzahut.com.tw/?urlname=banksinopacfareast_201903">立即<br>訂餐</a></p>
+				<p class="btn_order"><a target="_blank" href="https://www.pizzahut.com.tw/promotions/?parent_id=1960&urlname=bankaffiliate_10offcash_201903">立即<br>訂餐</a></p>
 				<p class="p_info">於2019/3/19-2019/4/30期間<br>
 					刷永豐銀行或遠東商銀信用卡<br>
 					消費<span>滿$500就送$50</span>刷卡金<br>
