--- a/Ad_marketing_sponsorship/index.html
+++ b/Ad_marketing_sponsorship/index.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>holkee 聯繫我們</title>
-<meta name='description' content="架站遇到問題了嗎？別擔心！holkee 技術服務小組協助您完成所有建置流程"/>
-<meta name='keywords' content="holkee, 微電商, 架站問題, 技術服務, 建置, 網站, 金物流, 電商, 上架, 下單, 買賣, 協助"/>
+<title>holkee 挺你！全新推出廣告行銷贊助計畫</title>
+<meta name='description' content="我們相信你的產品很多人想要！只是他們沒看到，我們相信你生意一定會成功！但我們希望你能更快達標"/>
+<meta name='keywords' content="holkee, 微電商, 廣告, 廣告行銷, 贊助金, 網站, 金物流, 電商, 達標, 生意, 買賣, 協助"/>
 <meta property="og:image" content="images/share_pic.png"/>
-<meta property="og:title" content="holkee微電商功能登場！"/>
+<meta property="og:title" content="holkee 挺你！全新推出廣告行銷贊助計畫"/>
 <meta property="og:url" content="#"/>
-<meta property="og:description" content="架站遇到問題了嗎？別擔心！holkee 技術服務小組協助您完成所有建置流程"/>
+<meta property="og:description" content="我們相信你的產品很多人想要！只是他們沒看到，我們相信你生意一定會成功！但我們希望你能更快達標"/>
 <meta property="og:type" content="content"/>
 
 <meta name="MobileOptimized" content="width">
