--- a/iiot/wifi/index.html
+++ b/iiot/wifi/index.html
@@ -12,8 +12,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	<!-- <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script> -->
 	<script type="text/javascript" src="js/goto.js"></script>
 	<script type="text/javascript" src="js/wow.js"></script>
+
 </head>
 <body>
 
@@ -46,7 +48,7 @@
       </div>
     </div>
 
-	<header class="header_box">
+	<header class="header_box top_header_fixed" id="header_box">
 		<section class="content_box">
 			<h3 class="logo"><a href="index.html"></a></h3>
 			<ul class="menu">
