--- a/iiot/wifi/product.html
+++ b/iiot/wifi/product.html
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-	<header class="header_box">
+	<header class="header_box" id="header_box">
 		<section class="content_box">
 			<h3 class="logo"><a href="index.html"></a></h3>
 			<ul class="menu">
