Update html - add animate

--- a/iiot/wifi/faq.html
+++ b/iiot/wifi/faq.html
@@ -75,11 +75,11 @@
 		<section class="faq_box">
 			<div class="content_box">
 				<h3 class="top_title wow fadeInDown" data-wow-duration="2.0s">THE BEST CHOICE EVER<br>FOR TRAVELING IN JAPAN</h3>
-				<p class="p_info">Feeling confused? You can find answers over here!<br>
+				<p class="p_info wow fadeIn" data-wow-duration="2.0s">Feeling confused? You can find answers over here!<br>
 					Or contact us via the chat window below or by email, “hello@gowifi.com.tw”. <br>
 					We will reply you shortly.
 				</p>
-				<ul class="faq_list">
+				<ul class="faq_list wow fadeIn" data-wow-duration="2.0s">
 					<li class="clearfix"><p class="nb">Q 01.</p>
 						<div class="faq_info">
 							<p class="topic">How do I apply for the Wifi machine?</p>
