--- a/iiot/wifi/how.html
+++ b/iiot/wifi/how.html
@@ -76,21 +76,21 @@
 			<div class="content_box">
 				<h3 class="top_title wow fadeInDown" data-wow-duration="2.0s">EASY AND FAST!</h3>
 				<ul class="step_box clearfix">
-					<li>
+					<li class="wow fadeInDown " data-wow-duration="2.5s">
 						<p>1.Book online</p>
 					</li>
-					<li>
+					<li class="wow fadeInDown " data-wow-duration="3.5s">
 						<p>2.Delivery / Pickup</p>
 					</li>
-					<li>
+					<li class="wow fadeInDown " data-wow-duration="4s">
 						<p>3.Enjoy Internet</p>
 					</li>
-					<li>
+					<li class="wow fadeInDown " data-wow-duration="4.5s">
 						<p>4.Return</p>
 					</li>
 				</ul>
 				<ul class="step_details_list">
-					<li class="clearfix">
+					<li class="clearfix wow fadeIn" data-wow-duration="3.5s">
 						<p class="title">1.Book online</p>
 						<div class="details_info">
 							<div class="abox">
@@ -106,7 +106,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="clearfix">
+					<li class="clearfix wow fadeIn" data-wow-duration="2.5s">
 						<p class="title">2.Delivery / Pickup</p>
 						<div class="details_info">
 							<div class="abox">
@@ -131,7 +131,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="clearfix">
+					<li class="clearfix wow fadeIn" data-wow-duration="2.5s">
 						<p class="title">3.Enjoy Internet</p>
 						<div class="details_info">
 							<div class="abox">
@@ -147,7 +147,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="clearfix">
+					<li class="clearfix wow fadeIn" data-wow-duration="2.5s">
 						<p class="title">4.Return easily</p>
 						<div class="details_info">
 							<div class="abox">
