--- a/iiot/wifi/index.html
+++ b/iiot/wifi/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-	<header class="header_box top_header_fixed" id="header_box">
+	<header class="header_box" id="header_box"><!-- 卷軸 往下增加 class="top_header_fixed" -->
 		<section class="content_box">
 			<h3 class="logo"><a href="index.html"></a></h3>
 			<ul class="menu">
@@ -106,9 +106,9 @@
 		<section class="why_rent_wifi_box">
 			<div class="content_box">
 				<h3 class="top_title wow fadeInDown " data-wow-duration="2.0s">Why Rent Pocket Wi-Fi?</h3>
-				<p class="p_info">Free Wi-Fi spots are not secure and hard to get in Japan. In hotel, some can only use in lobby areas and some can use in room for free but unstable.<br>
+				<p class="p_info wow fadeInUp " data-wow-duration="2.5s">Free Wi-Fi spots are not secure and hard to get in Japan. In hotel, some can only use in lobby areas and some can use in room for free but unstable.<br>
 				Pocket Wi-Fi is super easy to be connected with smartphone, tablet and laptop, or shared with friends. and the price is cheaper than international roaming.</p>
-				<p class="btn"><a href="#">EASY TO USE</a></p>
+				<p class="btn wow fadeInUp" data-wow-duration="4.5s"><a href="#">EASY TO USE</a></p>
 			</div>
 		</section>
 		<section class="why_choose_wifi_box">
@@ -116,35 +116,35 @@
 				<h3 class="top_title wow fadeInDown" data-wow-duration="2.0s">Why choose GO WiFi? </h3>
 				<p class="p_info">Most recommended by travelers!</p>
 				<ul class="advantage_list clearfix">
-					<li class="icon_01">
+					<li class="icon_01 wow fadeIn" data-wow-duration="2.5s">
 						<h4>REAL<br>UNLIMITED</h4>
 						<p>Connect anywhere in japan with Unlimited data in 4G LTE.</p>
 					</li>
-					<li class="icon_02">
+					<li class="icon_02 wow fadeIn" data-wow-duration="3.5s">
 						<h4>ENGLISH CUSTOMER<br>SUPPORT</h4>
 						<p>We provide English customer support for 10:00-19:00 everyday. Please feel free to contact us by email: hello@gowifi.com.tw or messenger: m.me/52gowifi</p>
 					</li>
-					<li class="icon_03">
+					<li class="icon_03 wow fadeIn" data-wow-duration="4.5s">
 						<h4>TRANSLATE<br>FUNCTION</h4>
 						<p>You can talk in English all the time, the WiFi router will speak Japanese for you.<br>(real-time translation) </p>
 					</li>
-					<li class="icon_04">
+					<li class="icon_04 wow fadeIn" data-wow-duration="5.5s">
 						<h4>Long lasting<br>battery</h4>
 						<p>Longer battery life for your whole day travel.<br>Can be also used as a power bank.</p>
 					</li>
-					<li class="icon_05">
+					<li class="icon_05 wow fadeIn" data-wow-duration="6.5s">
 						<h4>CHEAPEST<br>SHIPPING FEE</h4>
 						<p>For the best support, we afford half of the shipping fee for you.</p>
 					</li>
-					<li class="icon_06">
+					<li class="icon_06 wow fadeIn" data-wow-duration="7.5s">
 						<h4>MORE<br>VALUABLE</h4>
 						<p>Connect up to 5 device at once. For your own devices and friends.</p>
 					</li>
-					<li class="icon_07">
+					<li class="icon_07 wow fadeIn" data-wow-duration="8.5s">
 						<h4>EASY TO<br>Collect</h4>
 						<p>Pick up at any hotel or airports. Or receive in any provided address.</p>
 					</li>
-					<li class="icon_08">
+					<li class="icon_08 wow fadeIn" data-wow-duration="9.5s">
 						<h4>STABLE INTERNET<br>CONNECTION</h4>
 						<p>Unlike pricey mobile roaming or limited Prepaid SIM card, we provide you the best choice.</p>
 					</li>
@@ -156,10 +156,10 @@
 			<div class="content_box">
 				<h3 class="top_title wow fadeInDown " data-wow-duration="2.0s">HOW IT WORKS?</h3>
 				<ul class="step_box clearfix">
-					<li class="icon_01"><p>1.Book on-line</p></li>
-					<li class="icon_02"><p>2.Receive or pick up</p></li>
-					<li class="icon_03"><p>3.Enjoy stable Internet everywhere</p></li>
-					<li class="icon_04"><p>4.Return easily</p></li>
+					<li class="icon_01 wow fadeIn" data-wow-duration="2s"><p>1.Book on-line</p></li>
+					<li class="icon_02 wow fadeIn" data-wow-duration="2.5s"><p>2.Receive or pick up</p></li>
+					<li class="icon_03 wow fadeIn" data-wow-duration="3s"><p>3.Enjoy stable Internet everywhere</p></li>
+					<li class="icon_04 wow fadeIn" data-wow-duration="3.5s"><p>4.Return easily</p></li>
 				</ul>
 				<p class="btn"><a href="#">MORE DETAIL</a></p>
 			</div>
@@ -168,7 +168,7 @@
 			<div class="content_box">
 				<h3 class="top_title wow fadeInDown " data-wow-duration="2.0s">Customer’s Voice</h3>
 				<ul class="customers clearfix">
-					<li class="clearfix">
+					<li class="clearfix wow fadeInLeft" data-wow-duration="2.5s">
 						<div class="the_photo customer_01"></div>
 						<div class="feelback">
 							<p>This is awesome!<br>
@@ -185,7 +185,7 @@
 							</p>
 						</div>
 					</li>
-					<li class="clearfix">
+					<li class="clearfix wow fadeInRight" data-wow-duration="3.5s">
 						<div class="the_photo customer_02"></div>
 						<div class="feelback">
 							<p>It‘s really easy to use! <br>
@@ -202,7 +202,7 @@
 							</p>
 						</div>
 					</li>
-					<li class="clearfix">
+					<li class="clearfix wow fadeInLeft" data-wow-duration="3.5s">
 						<div class="the_photo customer_03"></div>
 						<div class="feelback">
 							<p>The price was reasonable for me.<br>
@@ -219,7 +219,7 @@
 							</p>
 						</div>
 					</li>
-					<li class="clearfix">
+					<li class="clearfix wow fadeInRight" data-wow-duration="4s">
 						<div class="the_photo customer_04"></div>
 						<div class="feelback">
 							<p>Good experience with using the SIM card in Japan. High speed, didn’t need to return while I paid less than the mobile roaming. It’s the most convenient way I ever used.
@@ -251,7 +251,7 @@
 		<section class="news_topics_box">
 			<div class="content_box">
 				<h3 class="top_title wow fadeInDown " data-wow-duration="2.0s">NEWS TOPICS</h3>
-				<ul class="news_list">
+				<ul class="news_list wow fadeIn" data-wow-duration="2.5s">
 					<li class="clearfix">
 						<a href="#">
 							<p class="day">2019.2.4</p>
