--- a/iiot/wifi/about.html
+++ b/iiot/wifi/about.html
@@ -74,9 +74,9 @@
 
 		<section class="about_info_box">
 			<div class="content_box">
-				<h3 class="top_title wow fadeInDown " data-wow-duration="2.0s">Discover your true needs.</h3>
-				<h4 class="sub_title_s">About our purpose of Wi-Fi service.</h4>
-				<p class="p_info">We are a team formed by foreigners in Japan.<br>
+				<h3 class="top_title wow fadeInDown">Discover your true needs.</h3>
+				<h4 class="sub_title_s wow fadeIn" data-wow-duration="2.0s">About our purpose of Wi-Fi service.</h4>
+				<p class="p_info  wow fadeIn" data-wow-duration="2.0s">We are a team formed by foreigners in Japan.<br>
 					After many times of traveling in Japan, we noticed that there is a significant need within a trip for unlimited, fast, simple, and stable portable internet via a Wi-Fi device.<br>
 					<br>
 					During trips in Japan, we always encountered challenges such as: Difficulties navigating without internet.<br>
@@ -100,7 +100,7 @@
 
 		<section class="team_list_box">
 			<div class="content_box clearfix">
-				<ul class="our_list">
+				<ul class="our_list wow fadeInLeft" data-wow-duration="2.0s">
 					<li class="clearfix">
 						<p class="title">DIRECTOR</p>
 						<p class="info">AKIRA TAKAKURA</p>
@@ -122,7 +122,7 @@
 						<p class="info">RYOHEI HOSOYA</p>
 					</li>
 				</ul>
-				<ul class="our_list">
+				<ul class="our_list wow fadeInRight" data-wow-duration="2.0s">
 					<li class="clearfix">
 						<p class="title">SYSTEM DEVELOPER</p>
 						<p class="info">TING HSIEH</p>
