--- a/iiot/wifi/product.html
+++ b/iiot/wifi/product.html
@@ -74,13 +74,13 @@
 
 		<section class="about_info_box">
 			<div class="content_box">
-				<h3 class="top_title wow fadeInDown " data-wow-duration="2.0s">THE BEST CHOICE EVER<br>FOR TRAVELING IN JAPAN</h3>
-				<h4 class="sub_title_s">EXTRAORDINARY SPEC. FOR YOUR OWN CONVENIENCE</h4>
-				<p class="p_info">We provide device with high technology for the traveler to enjoy the trip in Japan. <br>
+				<h3 class="top_title wow fadeInDown">THE BEST CHOICE EVER<br>FOR TRAVELING IN JAPAN</h3>
+				<h4 class="sub_title_s wow fadeIn" data-wow-duration="2.0s">EXTRAORDINARY SPEC. FOR YOUR OWN CONVENIENCE</h4>
+				<p class="p_info wow fadeIn" data-wow-duration="2.0s">We provide device with high technology for the traveler to enjoy the trip in Japan. <br>
 					This is not just a Wi-Fi Router. We also packed a lot of information inside such as maps for transportation, guides for restaurants, ...etc.<br> 
 					Also equipped with voice translate function to give traveler a help during the trip. 
 				</p>
-				<div class="producr_img_box clearfix">
+				<div class="producr_img_box clearfix wow fadeIn" data-wow-duration="2.0s">
 					<div class="img_box">
 						<img src="images/producr_G3.jpg" alt="MODEL G3">
 					</div>
@@ -99,7 +99,7 @@
 		<section class="team_list_box specification_box">
 			<div class="content_box clearfix">
 				<h3 class="top_title wow fadeIn" data-wow-duration="2.0s">SPECIFICATION</h3>
-				<ul class="our_list">
+				<ul class="our_list wow fadeInLeft" data-wow-duration="2.0s">
 					<li class="clearfix">
 						<p class="title">Product Name</p>
 						<p class="info">G3</p>
@@ -124,7 +124,7 @@
 						4G：50Mbps / 3G：11Mbps</p>
 					</li>
 				</ul>
-				<ul class="our_list">
+				<ul class="our_list wow fadeInRight" data-wow-duration="2.0s">
 					<li class="clearfix">
 						<p class="title">WLAN Standard</p>
 						<p class="info">IEEE 802.11b/g/n</p>
